Read repository from composer extra (#48)

--- a/composer.json
+++ b/composer.json
@@ -49,6 +49,9 @@
   "extra": {
     "branch-alias": {
       "dev-main": "2.0.0.x-dev"
+    },
+    "ecotone": {
+      "repository": "core"
     }
   },
   "config": {
